tests/query_errors/double_query/error.txt
Error: 
    6 | create pipeline add;
      | ^^^^^^^^^^^^^^^^^^^ Can't create the pipeline `add` twice